Update trigger.yaml for Azure Pipelines

--- a/trigger.yaml
+++ b/trigger.yaml
@@ -7,8 +7,8 @@ resources:
     azureSubscription: dockerhub
     registry: mtritabaugh
     repository: petclinic
+    image: petclinic
     trigger: 
       tags:
         include: 
         - "*"
-
