--- a/trigger.yaml
+++ b/trigger.yaml
@@ -13,7 +13,8 @@ resources:
       work: false
     trigger: 
       enabled: true
-        include: '*'
+        include:
+        - '*'
 
 stages:
 - stage: 'TEST'
